...
    
    public let textField: UITextField = {
        let tf = UITextField()
        tf.placeholder = "검색어를 입력하세요."
        tf.borderStyle = .none
        tf.returnKeyType = .search
        tf.accessibilityIdentifier = "search_textfield"
        tf.translatesAutoresizingMaskIntoConstraints = false
        tf.clearButtonMode = .always
        return tf
    }()
        
    
...
