...
    
    override func viewDidLoad() {
        super.viewDidLoad() 
        self.view.backgroundColor = .defaultBg
        self.setupNavigationItem(left: .dismiss(.back, self, #selector(didTapBackButton)),
                                 right: nil,
                                 title: "책 상세")
        
        layout()
        attribute()
        bind()
    }

...
